5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1756_1583.log
== TEST (2019-05-28 21:56:11) 
-- CODE:
n = int(input("caracteres numericos: "))
c1 = n0 + n1 + n2
print(c1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    c1 = n0 + n1 + n2
NameError: name 'n0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:58:36) 
-- CODE:
n = int(input("caracteres numericos: "))
c1 = n1 + n2 + n3
print(c1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    c1 = n1 + n2 + n3
NameError: name 'n1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:58:46) 
-- CODE:
n = int(input("caracteres numericos: "))
c1 = n1 + n2 + n3
print(c1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    c1 = n1 + n2 + n3
NameError: name 'n1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:58:54) 
-- CODE:
n = int(input("caracteres numericos: "))
c1 = n1 + n2 + n3
print(c1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    c1 = n1 + n2 + n3
NameError: name 'n1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:40:24) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n1 + n2 + n3
print(c1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    c1 = n1 + n2 + n3
NameError: name 'n1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:41:21) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[1] + n[2] + n[3]
print(c1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    c1 = n[1] + n[2] + n[3]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:44:25) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
t = []
t.append(c1,c2,c3)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c2 = n[3] + n[4] + n[5]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:44:50) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
t = []
t.append(c1 c2 c3)
print(t)
-- ERROR:
File "XXXX", line 6
    t.append(c1 c2 c3)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:45:12) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
t = []
t.append(c1(c2(c3)))
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c2 = n[3] + n[4] + n[5]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:45:37) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
t = []
t.append(c1 + c2 + c3
print(t)
-- ERROR:
File "XXXX", line 7
    print(t)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:45:53) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
t = []
t.append(c1 + c2 + c3)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c2 = n[3] + n[4] + n[5]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:46:13) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
t = []
t.append(c1 + c2 + c3)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c2 = n[3] + n[4] + n[5]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:48:06) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + "." + n[1] + "."+ n[2]
c2 = n[3] + "." + n[4] "." + n[5]
c3 = n[6] + "." + n[7] + "." + n[8]
t = []
t.append(c1 + c2 + c3)
print(t)
-- ERROR:
File "XXXX", line 3
    c2 = n[3] + "." + n[4] "." + n[5]
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:48:17) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + "." + n[1] + "."+ n[2]
c2 = n[3] + "." + n[4] + "." + n[5]
c3 = n[6] + "." + n[7] + "." + n[8]
t = []
t.append(c1 + c2 + c3)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c2 = n[3] + "." + n[4] + "." + n[5]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:49:36) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
t = []
t.append(c1 + "."+ c2 + "." + c3)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c2 = n[3] + n[4] + n[5]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:50:34) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
t = []
t.append(c1 + "."+ c2 + "." + c3)
print(str(t).replace("'",""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c2 = n[3] + n[4] + n[5]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:51:26) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
t = []
t.append(c1 + "."+ c2 + "." + c3)
print(str(t).replace("'","").replace('[]',''))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c2 = n[3] + n[4] + n[5]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:52:03) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
t = 0
t.append(c1 + "."+ c2 + "." + c3)
print(str(t).replace("'",""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c2 = n[3] + n[4] + n[5]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:52:49) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
t = []
t.append(c1 + "."+ c2 + "." + c3)
print(str(t).replace("[]",""))
print(str(t).replace("'",""))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c2 = n[3] + n[4] + n[5]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:53:41) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
c4 = c1 + "."+ c2 + "." + c3
print(c4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c2 = n[3] + n[4] + n[5]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:54:12) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
c4 = c1 + "."+ c2 + "." + c3
print(c4)
-- EXECUTION TIME:
0.178688
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1583/main.py", line 3, in <module>
    c2 = n[3] + n[4] + n[5]
IndexError: string index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:49:43) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
c4 = c1 + "."+ c2 + "." + c3
print(c4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c2 = n[3] + n[4] + n[5]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:49:54) 
-- CODE:
n = input("caracteres numericos: ")
c1 = n[0] + n[1] + n[2]
c2 = n[3] + n[4] + n[5]
c3 = n[6] + n[7] + n[8]
c4 = c1 + "."+ c2 + "." + c3
print(c4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c2 = n[3] + n[4] + n[5]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
